# z_project8_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/viperx/lib/viperx/: viperctrl
install/viperx/share/ament_index/resource_index/package_run_dependencies/: viperx
install/viperx/share/ament_index/resource_index/parent_prefix_path/: viperx
install/viperx/share/viperx/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/viperx/share/viperx/cmake/: viperxConfig.cmake
log/: latest_build
src/viperxcontroller/: CMakeLists.txt
src/viperxcontroller/include/viperxcontroller/: viperx_controller.hpp
src/viperxcontroller/src/: main.cpp  viperx_controller.cpp
